# plaster-box

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: config.cfg
migrations/: hidden_bins.sql
src/: app.rs  common.rs  config.rs  database.rs  footer.rs  main.rs
src/routes/: mod.rs  new.rs  recent.rs  root.rs  view.rs  view_raw.rs
src/sql/: create_bins.sql  insert_bin.sql  query_recent.sql
web/components/: footer.html
web/scss/: _vars.scss  new.scss  recent.scss
web/static/: index.html
web/static/box/: index.js
web/static/css/: new.css  new.css.map  recent.css  recent.css.map
web/static/new/: index.html  index.js
web/static/recent/: index.js
web/template/: box.html  recent.html
