[package]
name = "plaster_box"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "0.3.0", features = ["serve_static", "logging"] }
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4.0"
mut_static = "5.0.0"
bincode = "1.3.3"
ctrlc = "3.2.1"
