[package]
name = "plaster_box"
version = "0.1.0"
edition = "2021"

[dependencies]
# afire = { version = "1.2.0", features = ["extensions", "tracing"] }
afire = { git = "https://github.com/Basicprogrammer10/afire", branch = "dev", features = [
    "extensions",
] }
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4.0"
mut_static = "5.0.0"
bincode = "1.3.3"
ctrlc = "3.2.1"
simple_config_parser = "1.0.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
parking_lot = "0.12.1"
urlencoding = "2.1.2"
unidecode = "0.3.0"
