[package]
name = "plaster_box"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "2.0.0", features = ["extensions", "tracing"] }
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
ctrlc = "3.2.1"
simple_config_parser = "1.0.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
parking_lot = "0.12.1"
unidecode = "0.3.0"
